--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Experiments</title>
-    <script module src="/main.ts"></script>
+    <script type="module" src="/main.ts"></script>
   </head>
   <body>
     <h1>Experiments</h1>
