--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <title>Experiments</title>
     <script type="module" src="/main.ts"></script>
+    <link rel="stylesheet" href="/main.css" />
   </head>
-  <body>
-    <h1>Experiments</h1>
+  <body class="flex items-center justify-center min-h-screen p-3 bg-pink-100">
+    <h1 class="text-5xl font-extrabold text-pink-950">Experiments</h1>
   </body>
 </html>
